# cpp-dll-example

./: CMakeLists.txt  readme.md
src/: main.cpp  math.cpp  other.cpp
